<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Where Wolf</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="username">Username </string>
    <string name="password">Password</string>
    <string name="register">Register </string>
    <string name="repass">Re-type Password</string>
    <string name="join_game">Join Game</string>
    <string name="create_game">Create Game</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>

</resources>
